# ferrotone

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/ferrotone-cli/: Cargo.toml
crates/ferrotone-cli/src/: args.rs  file_mode.rs  main.rs  mic_mode.rs  note_log.rs
crates/ferrotone-core/: Cargo.toml
crates/ferrotone-core/src/: config.rs  error.rs  lib.rs
crates/ferrotone-core/tests/: capture_engine.rs  confidence_gate.rs  rms_gate.rs  (+4 more)
crates/mir1k-download/: Cargo.toml
crates/sample-gen/: Cargo.toml
doc/: CLI_MODE.md  CONFIGURATION.md  PHASE1.md  PLAN.md  REAL_TIME_GRAPHS.md  RECORDING_WIDGET.md  backlog.md  post_processing_filter.md
doc/api/: cpal.md  crossbeam-channel.md  pitch-core.md  tauri-test.md
samples/: README.md  tone_map.json
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/tests/: capture_commands.rs  pitch_events.rs
src/components/: AudioControls.test.tsx  AudioControls.tsx  PitchDisplay.test.tsx  PitchDisplay.tsx  PitchGraph.test.tsx  PitchGraph.tsx  TranscriptionStaff.tsx  VolumeGraph.test.tsx  VolumeGraph.tsx
src/hooks/: useAudioSettings.test.ts  useAudioSettings.ts  useNoteCapture.ts  usePitchCapture.test.ts  usePitchCapture.ts  usePitchGraphCapture.test.ts  usePitchGraphCapture.ts  useVolumeCapture.test.ts  useVolumeCapture.ts
src/lib/: test-setup.ts
(+18 files in other folders)
